packages/ptyx/native/include/ptyx/ptyx.h

/**
 * While the ABI major is zero, callers must require the exact packed version;
 * development releases may replace layouts without a compatibility shim.
 * Beginning with ABI 1.0, major changes are incompatible and minor releases
 * may add symbols, constants, event kinds, or trailing structure fields.
 * Callers must ignore unknown event kinds after releasing the event and must
 * initialize caller-sized structures to zero so a newer library can inspect
 * struct_size safely.
 *
 * ABI 0 requires the complete structure layout for the exact packed version.
 * Prefix-compatible fieldwise access and old-caller/new-library tests are
 * required before declaring ABI 1.0.
 */
/** Generation-checked runtime identity. */
typedef uint64_t ptyx_runtime_t;
/** Generation-checked session identity. */
typedef uint64_t ptyx_session_t;
/** Generation-checked owning event identity. */
typedef uint64_t ptyx_event_token_t;
/** Stable result of a ptyx operation. */
typedef enum ptyx_status {
  /** Operation completed successfully. */
  PTYX_STATUS_OK = 0,
  /** An argument or caller-sized structure is invalid. */
  PTYX_STATUS_INVALID_ARGUMENT = 1,
  /** A generation-checked handle or token is stale. */
  PTYX_STATUS_STALE_HANDLE = 2,
  /** The operation is invalid in the current lifecycle state. */
  PTYX_STATUS_WRONG_STATE = 3,
  /** Bounded input storage cannot accept the complete write now. */
  PTYX_STATUS_BACKPRESSURE = 4,
  /** The requested capability is unavailable. */
  PTYX_STATUS_UNSUPPORTED = 5,
  /** The requested direction or session is closed. */
  PTYX_STATUS_CLOSED = 6,
  /** The blocking event source reached its terminal state. */
  PTYX_STATUS_END_OF_STREAM = 7,
  /** Ownership is valid but temporarily prevents the operation. */
  PTYX_STATUS_BUSY = 8,
  /** An operating-system operation failed. */
  PTYX_STATUS_OS_ERROR = 9,
  /** Runtime infrastructure or an internal invariant failed. */
  PTYX_STATUS_INTERNAL = 10,
  /** Caller storage is smaller than the reported required length. */
  PTYX_STATUS_BUFFER_TOO_SMALL = 11,
  /** Reserved value that fixes the public enum representation at 32 bits. */
  PTYX_STATUS_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_status_t;
/** @} */

/** @defgroup ptyx_errors Errors */
/** @{ */

/** Stable subsystem that reported an error. */
typedef enum ptyx_error_domain {
  /** No error domain. */
  PTYX_ERROR_DOMAIN_NONE = 0,
  /** Caller input validation failure. */
  PTYX_ERROR_DOMAIN_ARGUMENT = 1,
  /** Lifecycle or handle-state failure. */
  PTYX_ERROR_DOMAIN_STATE = 2,
  /** Terminal input direction failure. */
  PTYX_ERROR_DOMAIN_INPUT = 3,
  /** Terminal output direction failure. */
  PTYX_ERROR_DOMAIN_OUTPUT = 4,
  /** Child process operation failure. */
  PTYX_ERROR_DOMAIN_PROCESS = 5,
  /** Shared runtime infrastructure failure. */
  PTYX_ERROR_DOMAIN_RUNTIME = 6,
  /** Operating-system boundary failure. */
  PTYX_ERROR_DOMAIN_OS = 7,
  /** Reserved value that fixes the public enum representation at 32 bits. */
  PTYX_ERROR_DOMAIN_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_error_domain_t;
/** Stable category of an error. */
typedef enum ptyx_error_kind {
  /** No error kind. */
  PTYX_ERROR_NONE = 0,
  /** Invalid caller value or layout. */
  PTYX_ERROR_INVALID_ARGUMENT = 1,
  /** Retired or unknown generation-checked identity. */
  PTYX_ERROR_STALE_HANDLE = 2,
  /** Operation rejected by the current lifecycle state. */
  PTYX_ERROR_WRONG_STATE = 3,
  /** Bounded queue cannot accept the complete operation. */
  PTYX_ERROR_QUEUE_FULL = 4,
  /** Capability is unavailable on this backend. */
  PTYX_ERROR_UNSUPPORTED = 5,
  /** Session or direction is terminal. */
  PTYX_ERROR_CLOSED = 6,
  /** Native or operating-system operation failed. */
  PTYX_ERROR_NATIVE_FAILURE = 7,
  /** Runtime ownership or event infrastructure was lost. */
  PTYX_ERROR_INFRASTRUCTURE_LOST = 8,
  /** Reserved value that fixes the public enum representation at 32 bits. */
  PTYX_ERROR_KIND_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_error_kind_t;
/** Stable operation associated with an error. */
typedef enum ptyx_operation {
  /** No associated operation. */
  PTYX_OPERATION_NONE = 0,
  /** Runtime construction. */
  PTYX_OPERATION_RUNTIME_CREATE = 1,
  /** Runtime shutdown or release. */
  PTYX_OPERATION_RUNTIME_SHUTDOWN = 2,
  /** Child and terminal spawn. */
  PTYX_OPERATION_SPAWN = 3,
  /** Terminal input write. */
  PTYX_OPERATION_WRITE = 4,
  /** Terminal output delivery or cancellation. */
  PTYX_OPERATION_OUTPUT = 5,
  /** Terminal resize. */
  PTYX_OPERATION_RESIZE = 6,
  /** Child termination. */
  PTYX_OPERATION_TERMINATE = 7,
  /** Atomic session metadata snapshot or observation. */
  PTYX_OPERATION_METADATA = 8,
  /** Session cleanup. */
  PTYX_OPERATION_CLOSE = 9,
  /** Reserved value that fixes the public enum representation at 32 bits. */
  PTYX_OPERATION_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_operation_t;
/**
 * @brief Stable value describing one failure.
 *
 * This structure owns no pointers. Unknown trailing fields are reserved for
 * compatible ABI growth. Initialize the complete structure to zero and set
 * struct_size before passing it to ptyx.
 */
typedef struct ptyx_error {
  uint32_t struct_size;       /**< Caller-visible structure size. */
  ptyx_error_domain_t domain; /**< PTYX_ERROR_DOMAIN_* value. */
  ptyx_error_kind_t kind;     /**< PTYX_ERROR_* value. */
  ptyx_operation_t operation; /**< PTYX_OPERATION_* value. */
  int32_t native_code;        /**< Optional errno or Win32 status, or zero. */
  uint32_t flags;             /**< Reserved error-detail bits. */
  uint64_t context[2];        /**< Bounded non-secret numeric context. */
  uint64_t reserved[3];       /**< Must be zero. */
} ptyx_error_t;
/** @} */

/** @defgroup ptyx_runtime Runtime */
/** @{ */

/** @brief Immutable borrowed byte sequence. */
typedef struct ptyx_bytes_view {
  const uint8_t *data; /**< Borrowed bytes, or NULL when length is zero. */
  uint64_t length;     /**< Number of readable bytes at data. */
} ptyx_bytes_view_t;
/**
 * @brief Runtime creation options.
 *
 * On Unix, an empty broker_path selects the integrity-checked broker bundled
 * with this library artifact. A nonempty path must name an executable broker
 * compatible with the library. Windows ignores broker_path. Set flags and
 * reserved fields to zero.
 */
typedef struct ptyx_runtime_options {
  uint32_t struct_size;          /**< Caller-visible structure size. */
  uint32_t flags;                /**< Must be zero. */
  ptyx_bytes_view_t broker_path; /**< Optional absolute Unix broker path. */
  uint64_t reserved[4];          /**< Must be zero. */
} ptyx_runtime_options_t;
struct ptyx_event;
/** @} */

/** @defgroup ptyx_sessions Sessions */
/** @{ */

/** Inherit the parent environment; environment_count must be zero. */
#define PTYX_SPAWN_INHERIT_ENVIRONMENT UINT32_C(1)
/** @brief PTY size in cells and optional pixels. */
typedef struct ptyx_size {
  uint32_t rows;         /**< Terminal rows in the range 1..=32767. */
  uint32_t columns;      /**< Terminal columns in the range 1..=32767. */
  uint32_t pixel_width;  /**< Optional pixel width in 0..=65535. */
  uint32_t pixel_height; /**< Optional pixel height in 0..=65535. */
} ptyx_size_t;
/**
 * @brief Spawn configuration.
 *
 * Arguments and environment entries are byte strings without embedded NUL.
 * Unix preserves their native bytes. Windows requires UTF-8. Environment
 * entries use the platform-neutral `NAME=VALUE` form. Set reserved fields to
 * zero. PTYX_SPAWN_INHERIT_ENVIRONMENT requires environment_count to be zero;
 * without it, environment is the complete child environment.
 * At most 256 arguments and 4096 environment entries are accepted. The
 * complete native-encoded spawn payload must not exceed 64 KiB.
 * graceful_close_timeout_us controls Unix graceful-close escalation and must
 * not exceed 60000000. Windows accepts the value but begins Job Object
 * termination immediately because it has no portable graceful request.
 */
typedef struct ptyx_spawn_options {
  uint32_t struct_size;                 /**< Caller-visible structure size. */
  uint32_t flags;                       /**< PTYX_SPAWN_* bits. */
  ptyx_bytes_view_t executable;         /**< Executable path or lookup name. */
  const ptyx_bytes_view_t *arguments;   /**< Borrowed argument array. */
  uint64_t argument_count;              /**< Number of argument views. */
  const ptyx_bytes_view_t *environment; /**< Borrowed NAME=VALUE array. */
  uint64_t environment_count;           /**< Number of environment views. */
  ptyx_bytes_view_t working_directory;  /**< Directory, or empty for current. */
  ptyx_size_t size;                     /**< Initial terminal size. */
  uint64_t input_capacity;              /**< Bounded accepted input bytes. */
  uint64_t output_capacity;             /**< Bounded retained output bytes. */
  uint64_t graceful_close_timeout_us;   /**< Unix TERM-to-force interval. */
  uint64_t reserved[4];                 /**< Must be zero. */
} ptyx_spawn_options_t;
/**
 * @brief Reactor-atomic session metadata and terminal-name storage request.
 *
 * Initialize the structure to zero, set struct_size, and optionally set
 * tty_name and tty_name_capacity. On return, flags identifies supported
 * values and tty_name_required reports the terminal-name byte count.
 */
typedef struct ptyx_session_snapshot {
  uint32_t struct_size; /**< Caller-visible structure size. */
  uint32_t flags;       /**< PTYX_SNAPSHOT_* result bits. */
  int64_t pid;          /**< Direct child process ID, or -1. */
  ptyx_size_t size;     /**< Reactor-atomic terminal size. */
  uint32_t modes;       /**< PTYX_MODE_* bits. */
  uint32_t reserved0;   /**< Must be zero. */
  uint8_t *tty_name;    /**< Optional caller-owned terminal-name storage. */
  uint64_t tty_name_capacity; /**< Writable bytes at tty_name. */
  uint64_t tty_name_required; /**< Required terminal-name byte count. */
  uint64_t reserved[4];       /**< Must be zero. */
} ptyx_session_snapshot_t;
/**
 * @brief Captures process, size, mode, and terminal-name metadata atomically.
 *
 * @param[in] session Live session handle.
 * @param[in,out] snapshot Initialized snapshot and optional terminal-name
 * storage. Fixed fields and tty_name_required are populated even when the
 * terminal-name buffer is too small.
 * @param[out] error Optional initialized error destination.
 * @return PTYX_STATUS_OK, PTYX_STATUS_BUFFER_TOO_SMALL, or a typed failure.
 *
 * PTYX_SNAPSHOT_HAS_MODE makes PTYX_MODE_* bits valid.
 * PTYX_SNAPSHOT_HAS_TTY_NAME makes the terminal-name fields valid. A second
 * call after a size query is a new atomic snapshot.
 */
PTYX_EXPORT ptyx_status_t PTYX_CALL
ptyx_session_snapshot(ptyx_session_t session, ptyx_session_snapshot_t *snapshot,
                      ptyx_error_t *error);
/** @} */

/** @defgroup ptyx_events Events */
/** @{ */

/** Stable kind of an event transferred from a runtime. */
typedef enum ptyx_event_kind {
  /** Spawn committed and the session is ready for operations. */
  PTYX_EVENT_SPAWN_READY = 1,
  /** Spawn failed and its attempted ownership was reclaimed. */
  PTYX_EVENT_SPAWN_FAILED = 2,
  /** Ordered terminal output bytes with an owning event token. */
  PTYX_EVENT_OUTPUT = 3,
  /** Previously accepted terminal input could not be delivered. */
  PTYX_EVENT_INPUT_FAILED = 4,
  /** Terminal output ended with a native failure. */
  PTYX_EVENT_OUTPUT_FAILED = 5,
  /** Runtime or process ownership infrastructure was lost. */
  PTYX_EVENT_INFRASTRUCTURE_FAILED = 6,
  /** Every safely readable output byte was delivered. */
  PTYX_EVENT_OUTPUT_DONE = 7,
  /** The direct child exited. */
  PTYX_EVENT_EXIT = 8,
  /** Explicit close reached its terminal cleanup result. */
  PTYX_EVENT_CLOSE_COMPLETE = 9,
  /** An observed terminal input mode changed. */
  PTYX_EVENT_MODE_CHANGED = 10,
  /** Reserved value that fixes the public enum representation at 32 bits. */
  PTYX_EVENT_KIND_ENUM_FORCE_32_BIT = INT32_MAX
} ptyx_event_kind_t;
/**
 * @brief One event transferred from a runtime.
 *
 * The kind determines which fields carry values:
 *
 * - PTYX_EVENT_SPAWN_READY has no additional value.
 * - PTYX_EVENT_SPAWN_FAILED carries error.
 * - PTYX_EVENT_OUTPUT carries immutable data, data_length, and an owning
 *   token.
 * - PTYX_EVENT_INPUT_FAILED, PTYX_EVENT_OUTPUT_FAILED, and
 *   PTYX_EVENT_INFRASTRUCTURE_FAILED carry error.
 * - PTYX_EVENT_OUTPUT_DONE has no additional value.
 * - PTYX_EVENT_EXIT carries the signed platform exit status in value.
 * - PTYX_EVENT_CLOSE_COMPLETE carries PTYX_EVENT_CLOSE_* bits in flags and
 *   the highest-priority retained failure in error.
 * - PTYX_EVENT_MODE_CHANGED carries PTYX_MODE_* bits in value.
 *
 * Every event identifies its session. Only PTYX_EVENT_OUTPUT has a nonzero
 * token. Its data remains valid until release.
 * Every successful next_event result must be released exactly once, including
 * events with an invalid token. Copying and releasing an owning event twice is
 * invalid.
 */
typedef struct ptyx_event {
  uint32_t struct_size;     /**< Caller-visible structure size. */
  ptyx_event_kind_t kind;   /**< PTYX_EVENT_* value. */
  uint32_t flags;           /**< Kind-specific PTYX_EVENT_* bits. */
  uint32_t reserved0;       /**< Must be zero. */
  ptyx_session_t session;   /**< Originating session or spawn request. */
  ptyx_event_token_t token; /**< Owning output token, or zero. */
  const uint8_t *data;      /**< Immutable output bytes until release. */
  uint64_t data_length;     /**< Number of readable bytes at data. */
  int64_t value;            /**< Kind-specific signed value. */
  ptyx_error_t error;       /**< Kind-specific value error. */
  uint64_t reserved[2];     /**< Must be zero. */
} ptyx_event_t;