packages/ptyx/lib/src/ffi/ptyx.g.dart


/// @brief One event transferred from a runtime.
///
/// The kind determines which fields carry values:
///
/// - PTYX_EVENT_SPAWN_READY has no additional value.
/// - PTYX_EVENT_SPAWN_FAILED carries error.
/// - PTYX_EVENT_OUTPUT carries immutable data, data_length, and an owning
/// token.
/// - PTYX_EVENT_INPUT_FAILED, PTYX_EVENT_OUTPUT_FAILED, and
/// PTYX_EVENT_INFRASTRUCTURE_FAILED carry error.
/// - PTYX_EVENT_OUTPUT_DONE has no additional value.
/// - PTYX_EVENT_EXIT carries the signed platform exit status in value.
/// - PTYX_EVENT_CLOSE_COMPLETE carries PTYX_EVENT_CLOSE_* bits in flags and
/// the highest-priority retained failure in error.
/// - PTYX_EVENT_MODE_CHANGED carries PTYX_MODE_* bits in value.
///
/// Every event identifies its session. Only PTYX_EVENT_OUTPUT has a nonzero
/// token. Its data remains valid until release.
/// Every successful next_event result must be released exactly once, including
/// events with an invalid token. Copying and releasing an owning event twice is
/// invalid.
final class ptyx_event extends ffi.Struct {
  /// < Caller-visible structure size.
  @ffi.Uint32()
  external int struct_size;

  /// < PTYX_EVENT_* value.
  @ffi.UnsignedInt()
  external int kind;

  /// < Kind-specific PTYX_EVENT_* bits.
  @ffi.Uint32()
  external int flags;

  /// < Must be zero.
  @ffi.Uint32()
  external int reserved0;

  /// < Originating session or spawn request.
  @ptyx_session_t()
  external int session;

  /// < Owning output token, or zero.
  @ptyx_event_token_t()
  external int token;

  /// < Immutable output bytes until release.
  external ffi.Pointer<ffi.Uint8> data;

  /// < Number of readable bytes at data.
  @ffi.Uint64()
  external int data_length;

  /// < Kind-specific signed value.
  @ffi.Int64()
  external int value;

  /// < Kind-specific value error.
  external ptyx_error_t error;

  /// < Must be zero.
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Uint64> reserved;
}

/// Stable kind of an event transferred from a runtime.
sealed class ptyx_event_kind {
  /// Spawn committed and the session is ready for operations.
  static const PTYX_EVENT_SPAWN_READY = 1;

  /// Spawn failed and its attempted ownership was reclaimed.
  static const PTYX_EVENT_SPAWN_FAILED = 2;

  /// Ordered terminal output bytes with an owning event token.
  static const PTYX_EVENT_OUTPUT = 3;

  /// Previously accepted terminal input could not be delivered.
  static const PTYX_EVENT_INPUT_FAILED = 4;

  /// Terminal output ended with a native failure.
  static const PTYX_EVENT_OUTPUT_FAILED = 5;

  /// Runtime or process ownership infrastructure was lost.
  static const PTYX_EVENT_INFRASTRUCTURE_FAILED = 6;

  /// Every safely readable output byte was delivered.
  static const PTYX_EVENT_OUTPUT_DONE = 7;

  /// The direct child exited.
  static const PTYX_EVENT_EXIT = 8;

  /// Explicit close reached its terminal cleanup result.
  static const PTYX_EVENT_CLOSE_COMPLETE = 9;

  /// An observed terminal input mode changed.
  static const PTYX_EVENT_MODE_CHANGED = 10;

  /// Reserved value that fixes the public enum representation at 32 bits.
  static const PTYX_EVENT_KIND_ENUM_FORCE_32_BIT = 2147483647;
}

typedef ptyx_event_t = ptyx_event;

/// Generation-checked owning event identity.
typedef ptyx_event_token_t = ffi.Uint64;
typedef Dartptyx_event_token_t = int;

/// Stable operation associated with an error.
sealed class ptyx_operation {
  /// No associated operation.
  static const PTYX_OPERATION_NONE = 0;

  /// Runtime construction.
  static const PTYX_OPERATION_RUNTIME_CREATE = 1;

  /// Runtime shutdown or release.
  static const PTYX_OPERATION_RUNTIME_SHUTDOWN = 2;

  /// Child and terminal spawn.
  static const PTYX_OPERATION_SPAWN = 3;

  /// Terminal input write.
  static const PTYX_OPERATION_WRITE = 4;

  /// Terminal output delivery or cancellation.
  static const PTYX_OPERATION_OUTPUT = 5;

  /// Terminal resize.
  static const PTYX_OPERATION_RESIZE = 6;

  /// Child termination.
  static const PTYX_OPERATION_TERMINATE = 7;

  /// Atomic session metadata snapshot or observation.
  static const PTYX_OPERATION_METADATA = 8;

  /// Session cleanup.
  static const PTYX_OPERATION_CLOSE = 9;

  /// Reserved value that fixes the public enum representation at 32 bits.
  static const PTYX_OPERATION_ENUM_FORCE_32_BIT = 2147483647;
}

/// @brief Runtime creation options.
///
/// On Unix, an empty broker_path selects the integrity-checked broker bundled
/// with this library artifact. A nonempty path must name an executable broker
/// compatible with the library. Windows ignores broker_path. Set flags and
/// reserved fields to zero.
final class ptyx_runtime_options extends ffi.Struct {
  /// < Caller-visible structure size.
  @ffi.Uint32()
  external int struct_size;

  /// < Must be zero.
  @ffi.Uint32()
  external int flags;

  /// < Optional absolute Unix broker path.
  external ptyx_bytes_view_t broker_path;

  /// < Must be zero.
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint64> reserved;
}

typedef ptyx_runtime_options_t = ptyx_runtime_options;

/// While the ABI major is zero, callers must require the exact packed version;
/// development releases may replace layouts without a compatibility shim.
/// Beginning with ABI 1.0, major changes are incompatible and minor releases
/// may add symbols, constants, event kinds, or trailing structure fields.
/// Callers must ignore unknown event kinds after releasing the event and must
/// initialize caller-sized structures to zero so a newer library can inspect
/// struct_size safely.
///
/// ABI 0 requires the complete structure layout for the exact packed version.
/// Prefix-compatible fieldwise access and old-caller/new-library tests are
/// required before declaring ABI 1.0.
/// /
/// /** Generation-checked runtime identity.
typedef ptyx_runtime_t = ffi.Uint64;
typedef Dartptyx_runtime_t = int;

/// @brief Reactor-atomic session metadata and terminal-name storage request.
///
/// Initialize the structure to zero, set struct_size, and optionally set
/// tty_name and tty_name_capacity. On return, flags identifies supported
/// values and tty_name_required reports the terminal-name byte count.
final class ptyx_session_snapshot$1 extends ffi.Struct {
  /// < Caller-visible structure size.
  @ffi.Uint32()
  external int struct_size;

  /// < PTYX_SNAPSHOT_* result bits.
  @ffi.Uint32()
  external int flags;

  /// < Direct child process ID, or -1.
  @ffi.Int64()
  external int pid;

  /// < Reactor-atomic terminal size.
  external ptyx_size_t size;

  /// < PTYX_MODE_* bits.
  @ffi.Uint32()
  external int modes;

  /// < Must be zero.
  @ffi.Uint32()
  external int reserved0;

  /// < Optional caller-owned terminal-name storage.
  external ffi.Pointer<ffi.Uint8> tty_name;

  /// < Writable bytes at tty_name.
  @ffi.Uint64()
  external int tty_name_capacity;

  /// < Required terminal-name byte count.
  @ffi.Uint64()
  external int tty_name_required;

  /// < Must be zero.
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint64> reserved;
}

typedef ptyx_session_snapshot_t = ptyx_session_snapshot$1;

/// Generation-checked session identity.
typedef ptyx_session_t = ffi.Uint64;
typedef Dartptyx_session_t = int;

/// @brief PTY size in cells and optional pixels.
final class ptyx_size extends ffi.Struct {
  /// < Terminal rows in the range 1..=32767.
  @ffi.Uint32()
  external int rows;

  /// < Terminal columns in the range 1..=32767.
  @ffi.Uint32()
  external int columns;

  /// < Optional pixel width in 0..=65535.
  @ffi.Uint32()
  external int pixel_width;

  /// < Optional pixel height in 0..=65535.
  @ffi.Uint32()
  external int pixel_height;
}

typedef ptyx_size_t = ptyx_size;

/// @brief Spawn configuration.
///
/// Arguments and environment entries are byte strings without embedded NUL.
/// Unix preserves their native bytes. Windows requires UTF-8. Environment
/// entries use the platform-neutral `NAME=VALUE` form. Set reserved fields to
/// zero. PTYX_SPAWN_INHERIT_ENVIRONMENT requires environment_count to be zero;
/// without it, environment is the complete child environment.
/// At most 256 arguments and 4096 environment entries are accepted. The
/// complete native-encoded spawn payload must not exceed 64 KiB.
/// graceful_close_timeout_us controls Unix graceful-close escalation and must
/// not exceed 60000000. Windows accepts the value but begins Job Object
/// termination immediately because it has no portable graceful request.
final class ptyx_spawn_options extends ffi.Struct {
  /// < Caller-visible structure size.
  @ffi.Uint32()
  external int struct_size;

  /// < PTYX_SPAWN_* bits.
  @ffi.Uint32()
  external int flags;

  /// < Executable path or lookup name.
  external ptyx_bytes_view_t executable;

  /// < Borrowed argument array.
  external ffi.Pointer<ptyx_bytes_view_t> arguments;

  /// < Number of argument views.
  @ffi.Uint64()
  external int argument_count;

  /// < Borrowed NAME=VALUE array.
  external ffi.Pointer<ptyx_bytes_view_t> environment;

  /// < Number of environment views.
  @ffi.Uint64()
  external int environment_count;

  /// < Directory, or empty for current.
  external ptyx_bytes_view_t working_directory;

  /// < Initial terminal size.
  external ptyx_size_t size;

  /// < Bounded accepted input bytes.
  @ffi.Uint64()
  external int input_capacity;

  /// < Bounded retained output bytes.
  @ffi.Uint64()
  external int output_capacity;

  /// < Unix TERM-to-force interval.
  @ffi.Uint64()
  external int graceful_close_timeout_us;

  /// < Must be zero.
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint64> reserved;
}

typedef ptyx_spawn_options_t = ptyx_spawn_options;

/// Stable result of a ptyx operation.
sealed class ptyx_status {
  /// Operation completed successfully.
  static const PTYX_STATUS_OK = 0;

  /// An argument or caller-sized structure is invalid.
  static const PTYX_STATUS_INVALID_ARGUMENT = 1;

  /// A generation-checked handle or token is stale.
  static const PTYX_STATUS_STALE_HANDLE = 2;

  /// The operation is invalid in the current lifecycle state.
  static const PTYX_STATUS_WRONG_STATE = 3;

  /// Bounded input storage cannot accept the complete write now.
  static const PTYX_STATUS_BACKPRESSURE = 4;

  /// The requested capability is unavailable.
  static const PTYX_STATUS_UNSUPPORTED = 5;

  /// The requested direction or session is closed.
  static const PTYX_STATUS_CLOSED = 6;

  /// The blocking event source reached its terminal state.
  static const PTYX_STATUS_END_OF_STREAM = 7;

  /// Ownership is valid but temporarily prevents the operation.
  static const PTYX_STATUS_BUSY = 8;

  /// An operating-system operation failed.
  static const PTYX_STATUS_OS_ERROR = 9;

  /// Runtime infrastructure or an internal invariant failed.
  static const PTYX_STATUS_INTERNAL = 10;

  /// Caller storage is smaller than the reported required length.
  static const PTYX_STATUS_BUFFER_TOO_SMALL = 11;

  /// Reserved value that fixes the public enum representation at 32 bits.
  static const PTYX_STATUS_ENUM_FORCE_32_BIT = 2147483647;
}
